fixed issue with collapsed sidebar tooltip overflow

--- a/ui/src/components/Investigation/InvestigationHeading.scss
+++ b/ui/src/components/Investigation/InvestigationHeading.scss
@@ -2,8 +2,6 @@
 
 $transition-duration: .3s;
 $sidebar-padding: 15px;
-$full-width: 300px;
-$collapsed-width: 57px;
 
 .InvestigationHeading {
   background: $blue1;
